[gd_scene load_steps=44 format=3 uid="uid://be8v1c686rjqf"]

[ext_resource type="Script" path="res://src/characters/Enemies/RangedEnemy.gd" id="1_nwbmc"]
[ext_resource type="PackedScene" uid="uid://bow024vtgyl7c" path="res://src/characters/Enemies/EnemyBullet.tscn" id="2_igqmj"]
[ext_resource type="Script" path="res://src/characters/behaviours/AccelerationBehaviour.gd" id="3_orm7m"]
[ext_resource type="Script" path="res://src/characters/behaviours/AttackingBehaviour.gd" id="4_qttoi"]
[ext_resource type="Script" path="res://src/characters/behaviours/ShootingProjectileBehaviour.gd" id="5_i42qq"]
[ext_resource type="Script" path="res://src/characters/behaviours/HealthBehaviour.gd" id="7_goap5"]
[ext_resource type="Script" path="res://src/characters/hithurtboxes/HurtBox.gd" id="8_scyix"]
[ext_resource type="Script" path="res://src/characters/behaviours/AnimationStateMachineBehaviour.gd" id="11_c7hah"]
[ext_resource type="PackedScene" uid="uid://bolc1i5nyc26f" path="res://assets/gltf/FlyingAnt.gltf" id="12_jxhl3"]
[ext_resource type="PackedScene" uid="uid://c2lu4g4enrlv7" path="res://src/camera/EnemyHPBar.tscn" id="12_o5moy"]
[ext_resource type="Script" path="res://src/characters/sid/Sound/Steps.gd" id="12_oa1e8"]
[ext_resource type="AudioStream" uid="uid://cy2gffbhnauvk" path="res://assets/audio/enemies/pain/Pain1.wav" id="13_i27vf"]
[ext_resource type="Material" uid="uid://co7rtkg6tjvqu" path="res://assets/materials/enemy_hurt_material.tres" id="13_yt1ap"]
[ext_resource type="AudioStream" uid="uid://b0kji0gy6pa2h" path="res://assets/audio/enemies/pain/Pain2.wav" id="14_px3qh"]
[ext_resource type="AudioStream" uid="uid://djd5lah8m68wb" path="res://assets/audio/enemies/pain/Pain3.wav" id="15_33mwq"]
[ext_resource type="AudioStream" uid="uid://coqnolvvx3vfl" path="res://assets/audio/enemies/pain/Pain4.wav" id="16_pbpli"]
[ext_resource type="AudioStream" uid="uid://r6fxwmwr2tcs" path="res://assets/audio/enemies/pain/Pain5.wav" id="17_c1b6o"]
[ext_resource type="AudioStream" uid="uid://dvnh8uy72i46h" path="res://assets/audio/enemies/pain/Pain6.wav" id="18_nptns"]
[ext_resource type="AudioStream" uid="uid://dhfbg8hbgde0n" path="res://assets/audio/enemies/death/Death1.wav" id="19_2n7pg"]
[ext_resource type="AudioStream" uid="uid://cky7axpfqxkp3" path="res://assets/audio/enemies/death/Death2.wav" id="20_a2gku"]
[ext_resource type="AudioStream" uid="uid://ct0xf52ijimlg" path="res://assets/audio/enemies/EnemyFly.wav" id="21_exxww"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_hn8fk"]
radius = 0.4
height = 1.5

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_2k7hu"]
height = 1.6

[sub_resource type="SphereShape3D" id="SphereShape3D_16e8e"]
radius = 11.9566

[sub_resource type="Animation" id="Animation_t6465"]
resource_name = "Die"
length = 1.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingAnt/FlyingAnt_Bones/Skeleton3D/FlyingAnt2:transparency")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1.5),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 1.0]
}

[sub_resource type="Animation" id="Animation_clb4f"]
resource_name = "Hurt"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingAnt/FlyingAnt_Bones/Skeleton3D/FlyingAnt2:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [1.0, 0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlyingAnt/FlyingAnt_Bones/Skeleton3D/FlyingAnt2:instance_shader_parameters/grow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0.1, 0.01]
}

[sub_resource type="Animation" id="Animation_l0qyq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("FlyingAnt/FlyingAnt_Bones/Skeleton3D/FlyingAnt2:instance_shader_parameters/alpha")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("FlyingAnt/FlyingAnt_Bones/Skeleton3D/FlyingAnt2:instance_shader_parameters/grow")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.01]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("FlyingAnt/FlyingAnt_Bones/Skeleton3D/FlyingAnt2:transparency")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tqjfq"]
_data = {
"Die": SubResource("Animation_t6465"),
"Hurt": SubResource("Animation_clb4f"),
"RESET": SubResource("Animation_l0qyq")
}

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_k8srx"]
animation = &"Die"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_686d1"]
animation = &"Idle"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_arn82"]
animation = &"Move"

[sub_resource type="AnimationNodeAnimation" id="AnimationNodeAnimation_lypkx"]
animation = &"Shoot"

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_2pshm"]
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_l5jr2"]

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_3hr42"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_pvmu2"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_b5nan"]
switch_mode = 2
advance_mode = 2

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_iyb0f"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_omhpy"]
xfade_time = 0.1

[sub_resource type="AnimationNodeStateMachineTransition" id="AnimationNodeStateMachineTransition_0o3ho"]

[sub_resource type="AnimationNodeStateMachine" id="AnimationNodeStateMachine_ls8tb"]
states/Die/node = SubResource("AnimationNodeAnimation_k8srx")
states/Die/position = Vector2(670, 145)
states/Idle/node = SubResource("AnimationNodeAnimation_686d1")
states/Idle/position = Vector2(368, 94)
states/Move/node = SubResource("AnimationNodeAnimation_arn82")
states/Move/position = Vector2(427, 257)
states/Shoot/node = SubResource("AnimationNodeAnimation_lypkx")
states/Shoot/position = Vector2(535, 32)
transitions = ["Start", "Idle", SubResource("AnimationNodeStateMachineTransition_2pshm"), "Idle", "Shoot", SubResource("AnimationNodeStateMachineTransition_l5jr2"), "Idle", "Move", SubResource("AnimationNodeStateMachineTransition_3hr42"), "Move", "Idle", SubResource("AnimationNodeStateMachineTransition_pvmu2"), "Shoot", "Idle", SubResource("AnimationNodeStateMachineTransition_b5nan"), "Shoot", "Die", SubResource("AnimationNodeStateMachineTransition_iyb0f"), "Move", "Die", SubResource("AnimationNodeStateMachineTransition_omhpy"), "Idle", "Die", SubResource("AnimationNodeStateMachineTransition_0o3ho")]
graph_offset = Vector2(-40, -90)

[sub_resource type="AnimationNodeStateMachinePlayback" id="AnimationNodeStateMachinePlayback_1yr7y"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3tm33"]
size = Vector3(0.1, 0.1, 0.1)

[node name="RangedEnemy" type="CharacterBody3D"]
collision_layer = 8
collision_mask = 7
script = ExtResource("1_nwbmc")
bullet_scene = ExtResource("2_igqmj")
mass = 2.0

[node name="AccelerationBehaviour" type="Node" parent="."]
script = ExtResource("3_orm7m")
acceleration_magnitude = 15.0
turn_speed = 2.0
accelerate_forward = true

[node name="AttackingBehaviour" type="Node" parent="."]
script = ExtResource("4_qttoi")
attack_wait_time = 1.5

[node name="ShootingProjectileBehaviour" type="Node" parent="." node_paths=PackedStringArray("spawn_point")]
script = ExtResource("5_i42qq")
ProjectileScene = ExtResource("2_igqmj")
spawn_point = NodePath("../BulletSpawnPoint")

[node name="HealthBehaviour" type="Node" parent="."]
script = ExtResource("7_goap5")
max_health = 30

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.00612, 0.103913)
shape = SubResource("CapsuleShape3D_hn8fk")

[node name="HurtArea" type="Area3D" parent="."]
collision_layer = 8
collision_mask = 0
script = ExtResource("8_scyix")

[node name="HurtAreaCollision" type="CollisionShape3D" parent="HurtArea"]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, 1, 0, -1, -4.37114e-08, 0, 0.894088, 0.119677)
shape = SubResource("CapsuleShape3D_2k7hu")

[node name="BulletSpawnPoint" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.33322, -0.585797)

[node name="EnemyHPBar" parent="." instance=ExtResource("12_o5moy")]

[node name="IdleTarget" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0.127391, 0, -2.22611)

[node name="AlertRange" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 8

[node name="CollisionShape3D" type="CollisionShape3D" parent="AlertRange"]
shape = SubResource("SphereShape3D_16e8e")

[node name="FlyingAnt" parent="." instance=ExtResource("12_jxhl3")]
transform = Transform3D(-0.4, 0, -6.03983e-08, 0, 0.4, 0, 6.03983e-08, 0, -0.4, 0, 0, 0)

[node name="Skeleton3D" parent="FlyingAnt/FlyingAnt_Bones" index="0"]
bones/1/position = Vector3(-0.449438, 0.207582, 1.40667)
bones/1/rotation = Quaternion(0.673125, 0.673125, 0.216569, -0.216569)
bones/2/rotation = Quaternion(0.571749, -0.289073, -0.528343, 0.55713)
bones/3/position = Vector3(-0.363837, 0.476923, 0.58791)
bones/3/rotation = Quaternion(0.705863, 0.705863, -0.0419184, 0.0419184)
bones/5/position = Vector3(-0.00686121, 0.98365, 1.51601)
bones/5/rotation = Quaternion(0.663619, 0.706164, 0.244151, -0.0365065)
bones/6/rotation = Quaternion(0.791507, 0.0739132, 0.233341, 0.560006)
bones/7/position = Vector3(5.12606e-13, 1.37572e-08, 3.15353)
bones/7/rotation = Quaternion(2.659e-07, 0.989255, 0.146199, -6.1666e-07)
bones/8/position = Vector3(-3.01215e-07, -0.54531, 0.160563)
bones/8/rotation = Quaternion(0.960024, 0.040114, -0.0336836, 0.274972)
bones/9/position = Vector3(-5.75891e-07, 1.04108, 0.425835)
bones/9/rotation = Quaternion(0.581961, -1.0362e-07, 2.13126e-07, 0.813217)
bones/11/position = Vector3(0.127877, 0.0353165, -0.300457)
bones/11/rotation = Quaternion(0.2492, 0.604544, -0.756573, -0.00486813)
bones/12/rotation = Quaternion(-0.0359324, -0.163653, -0.0466701, 0.984758)
bones/13/rotation = Quaternion(-0.42409, 0.132018, 0.104201, 0.889866)
bones/14/rotation = Quaternion(-0.215064, 0.0403023, -0.0534265, 0.974304)
bones/15/rotation = Quaternion(-0.197212, 0.0641353, 0.00417674, 0.978252)
bones/16/rotation = Quaternion(-0.0405366, -0.0891574, 0.130414, 0.98661)
bones/17/position = Vector3(-0.127877, 0.0353164, -0.300457)
bones/17/rotation = Quaternion(-0.249199, 0.604544, -0.756573, 0.00486862)
bones/18/rotation = Quaternion(-0.0359323, 0.163653, 0.0466701, 0.984758)
bones/19/rotation = Quaternion(-0.42409, -0.132018, -0.104201, 0.889866)
bones/20/rotation = Quaternion(-0.215064, -0.0403023, 0.0534265, 0.974304)
bones/21/rotation = Quaternion(-0.197212, -0.0641353, -0.00417674, 0.978252)
bones/22/rotation = Quaternion(0.315233, 0.59056, 0.513051, 0.537257)
bones/23/rotation = Quaternion(0.434889, -0.109145, 0.129017, 0.884485)
bones/24/rotation = Quaternion(0.785382, -0.130221, -0.0759148, -0.600378)
bones/25/rotation = Quaternion(-0.0549986, -0.0281762, 0.00221899, 0.998086)
bones/26/rotation = Quaternion(0.516558, 0.308637, 0.376815, 0.704217)
bones/27/rotation = Quaternion(0.464797, -0.0535094, 0.0963767, 0.878528)
bones/28/rotation = Quaternion(0.501529, -0.133723, -0.00884458, -0.854698)
bones/29/rotation = Quaternion(0.0175475, 0.0655643, 0.0509489, 0.996392)
bones/30/rotation = Quaternion(0.7358, 0.342292, 0.131966, 0.569227)
bones/31/rotation = Quaternion(0.56531, -0.0574092, 0.130103, 0.812528)
bones/32/rotation = Quaternion(0.849709, -0.0656137, -0.0888774, -0.515548)
bones/33/rotation = Quaternion(-0.276396, -0.0346307, 0.0248678, 0.960098)
bones/34/rotation = Quaternion(-0.306296, 0.597576, 0.512687, -0.535012)
bones/35/rotation = Quaternion(0.442345, 0.106637, -0.126455, 0.881458)
bones/36/rotation = Quaternion(0.809336, 0.119574, 0.0788408, -0.569616)
bones/37/rotation = Quaternion(-0.065662, 0.0286224, -0.000344555, 0.997431)
bones/38/rotation = Quaternion(0.516558, -0.308638, -0.376814, 0.704217)
bones/39/rotation = Quaternion(0.464798, 0.0535093, -0.0963768, 0.878528)
bones/40/rotation = Quaternion(0.50153, 0.133723, 0.00884466, -0.854697)
bones/41/rotation = Quaternion(0.0175469, -0.0655642, -0.0509489, 0.996392)
bones/42/rotation = Quaternion(0.7358, -0.342293, -0.131965, 0.569227)
bones/43/rotation = Quaternion(0.56531, 0.0574093, -0.130103, 0.812528)
bones/44/rotation = Quaternion(0.849709, 0.0656138, 0.0888775, -0.515548)
bones/45/rotation = Quaternion(-0.276396, 0.0346306, -0.0248678, 0.960098)
bones/46/position = Vector3(0.383188, 0.275149, -0.332472)
bones/46/rotation = Quaternion(0.858463, 0.429975, 0.0533358, -0.274441)
bones/47/position = Vector3(-0.383187, 0.275149, -0.332473)
bones/47/rotation = Quaternion(0.858463, -0.429975, -0.0533347, -0.274442)
bones/48/rotation = Quaternion(0.805486, 0.505776, 0.209386, -0.227024)
bones/49/rotation = Quaternion(0.805486, -0.505776, -0.209385, -0.227025)
bones/50/position = Vector3(0.449438, 0.207582, 1.40667)
bones/50/rotation = Quaternion(-0.673125, 0.673125, 0.216569, 0.216569)
bones/51/rotation = Quaternion(0.571749, 0.289073, 0.528343, 0.55713)
bones/52/position = Vector3(0.363837, 0.476923, 0.58791)
bones/52/rotation = Quaternion(0.705863, -0.705863, 0.0419184, 0.0419184)
bones/54/position = Vector3(-0.0165559, 0.98365, 1.61006)
bones/54/rotation = Quaternion(0.68298, -0.699969, -0.183137, -0.100218)
bones/55/rotation = Quaternion(0.791507, -0.0739132, -0.233341, 0.560006)

[node name="FlyingAnt2" parent="FlyingAnt/FlyingAnt_Bones/Skeleton3D" index="0"]
material_overlay = ExtResource("13_yt1ap")
instance_shader_parameters/alpha = 0.0
instance_shader_parameters/grow = 0.01

[node name="EffectsAnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_tqjfq")
}

[node name="AnimationTree" type="AnimationTree" parent="."]
tree_root = SubResource("AnimationNodeStateMachine_ls8tb")
anim_player = NodePath("../FlyingAnt/AnimationPlayer")
active = true
parameters/playback = SubResource("AnimationNodeStateMachinePlayback_1yr7y")

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("animation_tree")]
script = ExtResource("11_c7hah")
animation_tree = NodePath("../AnimationTree")

[node name="CollisionShape3D2" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.05, 0)
shape = SubResource("BoxShape3D_3tm33")

[node name="PainSounds" type="Node3D" parent="."]
script = ExtResource("12_oa1e8")

[node name="Pain1" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("13_i27vf")

[node name="Pain2" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("14_px3qh")

[node name="Pain3" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("15_33mwq")

[node name="Pain4" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("16_pbpli")

[node name="Pain5" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("17_c1b6o")

[node name="Pain6" type="AudioStreamPlayer3D" parent="PainSounds"]
stream = ExtResource("18_nptns")

[node name="DeathSounds" type="Node3D" parent="."]
script = ExtResource("12_oa1e8")

[node name="Death1" type="AudioStreamPlayer3D" parent="DeathSounds"]
stream = ExtResource("19_2n7pg")

[node name="Death2" type="AudioStreamPlayer3D" parent="DeathSounds"]
stream = ExtResource("20_a2gku")

[node name="FlySound" type="AudioStreamPlayer3D" parent="."]
stream = ExtResource("21_exxww")
attenuation_model = 1
autoplay = true
stream_paused = true
max_distance = 100.0

[connection signal="attack" from="AttackingBehaviour" to="." method="_on_attacking_behaviour_attack"]
[connection signal="current_changed" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="set_current_hp"]
[connection signal="damaged" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="damaged"]
[connection signal="healed" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="healed"]
[connection signal="max_changed" from="HealthBehaviour" to="EnemyHPBar/HPBar" method="set_max_hp"]
[connection signal="no_health" from="HealthBehaviour" to="." method="_on_health_behaviour_no_health"]
[connection signal="damaged" from="HurtArea" to="." method="_on_hurt_area_damaged"]

[editable path="EnemyHPBar"]
[editable path="FlyingAnt"]
